--- a/I-packages.tex
+++ b/I-packages.tex
@@ -3,3 +3,7 @@
 \usepackage[T1]{fontenc} % font
 \usepackage{setspace} %
 % \usepackage[left=4cm,right=2cm,top=2cm,bottom=2cm]{geometry}
+\usepackage{mathptmx}
+\usepackage{slantsc}
+\usepackage{titlesec}
+\usepackage{mfirstuc} 
