ADD first draft for titlepage, all info in

--- a/Preliminaries/1-titlepages.tex
+++ b/Preliminaries/1-titlepages.tex
@@ -1,1 +1,43 @@
-hello
+\begin{center}
+\vspace*{15pt}\par
+
+\begin{spacing}{1.8}
+%% you can replace by \MakeUppercase if you want uppercase
+{\Large\bfseries\MakeLowercase{\capitalisewords{\thesisTitle}}}
+\end{spacing}
+
+% This thesis is composed of \numberVolume volumes. This one is the number \actualVolume.
+
+\vspace{50pt}\par
+
+{\itshape\fontsize{15.5pt}{19pt}\selectfont by}\vspace{15pt}
+
+{
+\Large \authorName
+% , \distinction
+}
+
+\vspace{50pt}\par
+
+{
+\fontsize{15pt}{18pt}\selectfont Submitted for the degree of \\ \vspace{8pt} \fontsize{16pt}{19pt}\selectfont\degree
+}
+
+\vspace{140pt}\par
+
+
+{\scshape\large\setstretch{1.5} \institution\\ \school\\ \university\\
+}
+
+\vspace{80pt}\par
+
+
+{\Large \monthDate\ \yearDate}
+
+\vfill
+
+\begin{flushleft}
+\doublespacing
+The copyright in this thesis is owned by the author. Any quotation from the thesis or use of any of the information contained in it must acknowledge this thesis as the source of the quotation or information.
+\end{flushleft}
+\end{center}
