UDPATE packages, forgot before
add glossaries, spacing, calc for operation, uppercase also

--- a/I-packages.tex
+++ b/I-packages.tex
@@ -1,9 +1,13 @@
 \usepackage{graphicx} % include graphics
 \usepackage{fancyhdr} % layout
+\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc} % font
-\usepackage{setspace} %
+\usepackage{setspace} % spacing
 % \usepackage[left=4cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \usepackage{mathptmx} % looks like times new roman
 \usepackage{slantsc}
 \usepackage{titlesec}
 \usepackage{mfirstuc} 
+\usepackage{calc} % http://ctan.org/pkg/calc
+\usepackage{setspace}
+\usepackage[acronym, toc]{glossaries} % https://www.overleaf.com/learn/latex/Glossaries
