--- a/Thesis.tex
+++ b/Thesis.tex
@@ -2,7 +2,8 @@
 
 \include{I-packages}
 \include{I-config}
-\include{I-info.tex}
+\include{I-info}
+\include{I-glossaries}
 \include{I-packages-2} % some package need to be loaded last in preamble
 
 \begin{document}
@@ -10,8 +11,8 @@
 \pagestyle{empty}
 \input{Preliminaries/1-titlepages}
 \clearpage
-%% remove this line if you don't want pagination on preliminary pages
-%% also read the comment below, for table of content and other
+% % remove this line if you don't want pagination on preliminary pages
+% % also read the comment below, for table of content and other
 \pagestyle{preliminary}
 \input{Preliminaries/2-abstract}
 \clearpage
@@ -19,13 +20,15 @@
 \clearpage
 \input{Preliminaries/4-acknowledgments}
 \clearpage
-%% read about declaration in file
-%% \input{Preliminaries/5-declaration}
+% % read about declaration in file
+% % \input{Preliminaries/5-declaration}
 
 
 \tableofcontents
 \listoftables
 \listoffigures
+\glsaddall
+\printnoidxglossary[type=\acronymtype]
 
 %% if you don't want pagination you need to use this commented part instead of the one above for the table of content/list of figure/etc
 %% this is because the toc is defined in an annoying way, especially multi page one
@@ -57,5 +60,4 @@
 \subfile{Chapters/Chapter2}
 \appendix
 \subfile{Appendix/Appendix1}
-
 \end{document}
