UPDATE use biblatex instead of bibtex for references + further reading

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -22,4 +22,9 @@
     ISSN={1941-0026},
     month={June}
 }
-    
+
+@misc{C03,
+  author = {Cuthor, C.},
+  year = {2003},
+  title = {Charlie},
+}
