--- a/I-packages.tex
+++ b/I-packages.tex
@@ -8,6 +8,7 @@
 \usepackage{slantsc}
 \usepackage{titlesec}
 \usepackage{mfirstuc} 
-\usepackage{calc} % http://ctan.org/pkg/calc
+\usepackage{calc}% http://ctan.org/pkg/calc
 \usepackage{setspace}
-\usepackage[acronym, toc]{glossaries} % https://www.overleaf.com/learn/latex/Glossaries
+\usepackage[acronym]{glossaries} % https://www.overleaf.com/learn/latex/Glossaries
+\usepackage[defernumbers=true]{biblatex}
