--- a/I-packages.tex
+++ b/I-packages.tex
@@ -12,3 +12,4 @@
 \usepackage{setspace}
 \usepackage[acronym]{glossaries} % https://www.overleaf.com/learn/latex/Glossaries
 \usepackage[defernumbers=true]{biblatex}
+\usepackage{hyperref} % https://ctan.org/pkg/hyperref
