ADD Candidats publications
todo: list of publications at the start

step counter manually

--- a/I-packages.tex
+++ b/I-packages.tex
@@ -13,3 +13,4 @@
 \usepackage[acronym]{glossaries} % https://www.overleaf.com/learn/latex/Glossaries
 \usepackage[defernumbers=true]{biblatex}
 \usepackage{hyperref} % https://ctan.org/pkg/hyperref
+\usepackage{pdfpages}
