ADD declaration form pdf + UPDATE preliminaries a bit

--- a/Preliminaries/3-dedication.tex
+++ b/Preliminaries/3-dedication.tex
@@ -1,1 +1,7 @@
-dedication
+\begin{center}
+\LARGE\textbf {Dedication}
+\end{center}
+\vspace{5pt}
+
+If a dedication is included then it should be immediately after the Abstract page.\par
+I don't what it is actually.
