--- a/Preliminaries/4-acknowledgments.tex
+++ b/Preliminaries/4-acknowledgments.tex
@@ -1,1 +1,6 @@
-thanks everyone
+\begin{center}
+\LARGE\textbf {Acknowledgements}
+\end{center}
+\vspace{5pt}
+
+\noindent I wanna thanks all coffee and tea manufacturers and sellers that made the completion of this work possible. 
