--- a/Thesis.tex
+++ b/Thesis.tex
@@ -22,6 +22,7 @@
 \clearpage
 % % read about declaration in file
 % % \input{Preliminaries/5-declaration}
+\includepdf[pages=-]{Preliminaries/5-declaration.pdf}
 
 
 \tableofcontents
