ADD list of publications + UPDATE biblio + FIX pdf include
pdf files publications was not linked correctly
chapters cite new 'paper'
3 bibliograpy: publications of candidats, references, bibliography of non cited (it includes the works of the candidats if not cited, otherwise it is in ref)

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,26 +1,15 @@
-@article{PSO2007,
-  title={Particle swarm optimization},
-  author={Poli, Riccardo and Kennedy, James and Blackwell, Tim},
-  journal={Swarm intelligence},
-  volume={1},
-  number={1},
-  pages={33--57},
-  year={2007},
-  publisher={Springer}
+@misc{C01,
+  author = {Anglois, B.},
+  year = {2005},
+  title = {This is a paper},
+  keywords={biblio}
 }
 
-@article{SPSO2011,
-    author={M. {Zambrano-Bigiarini} and M. {Clerc} and R. {Rojas}},
-    booktitle={2013 IEEE Congress on Evolutionary Computation},
-    title={Standard Particle Swarm Optimisation 2011 at CEC-2013: A baseline for future PSO improvements},
-    year={2013},
-    volume={},
-    number={},
-    pages={2337-2344},
-    keywords={convergence;particle swarm optimisation;random processes;topology;standard particle swarm optimisation;future PSO improvements;SPSO- 2011;real-parameter single objective optimisation;CEC-2013;adaptive random topology;rotational invariance;unimodal test functions;separable test functions;fast convergence;global optimum;rotated multimodal functions;local minima;global minimum;Optimization;Standards;Benchmark testing;Topology;Algorithm design and analysis;Convergence;Equations;particle swarm optimization;SPSO-2011;CEC-2013;random topology;rotational invariance;benchmark testing;evolutionary computation;optimization},
-    doi={10.1109/CEC.2013.6557848},
-    ISSN={1941-0026},
-    month={June}
+@misc{C02,
+  author = {Ovalie, F.},
+  year = {2005},
+  title = {Robert},
+  keywords={biblio}
 }
 
 @misc{C03,
@@ -28,3 +17,10 @@
   year = {2003},
   title = {Charlie},
 }
+
+@misc{C04,
+  author = {Absol, E.},
+  year = {2005},
+  title = {Danger},
+}
+
