--- a/I-config.tex
+++ b/I-config.tex
@@ -92,6 +92,8 @@
 \renewcommand*\listfigurename{Figure table}
 
 %% init gloassaries
+%% noidx cause otherwise we have to do a normal glossary, compile, then remove it so it is cached
+%% because we only use acronym
 \makenoidxglossaries
 
 %% bibliography config
@@ -99,6 +101,7 @@
 \DeclareBibliographyCategory{cited}
 \AtEveryCitekey{\addtocategory{cited}{\thefield{entrykey}}}
 \addbibresource{Bibliography.bib}
+\addbibresource{BibMine.bib}
 \nocite{*}
 
 %% hyperref setup
