--- a/I-packages.tex
+++ b/I-packages.tex
@@ -14,3 +14,4 @@
 \usepackage[defernumbers=true]{biblatex}
 \usepackage{hyperref} % https://ctan.org/pkg/hyperref
 \usepackage{pdfpages}
+\usepackage{float}
