--- a/Preliminaries/1-titlepages.tex
+++ b/Preliminaries/1-titlepages.tex
@@ -23,7 +23,7 @@
 }\vspace{55pt}\par
 
 {
-\large Submitted for the degree of \\ \vspace{8pt} \Large\slshape\degree\\
+\large Submitted for the degree of \\ \vspace{8pt} \Large\slshape\degreeQualification\\
 }
 
 \vspace{35pt}\par
