--- a/Thesis.tex
+++ b/Thesis.tex
@@ -1,3 +1,12 @@
+%%%%
+%% This Source Code Form is subject to the terms of the MIT License. 
+%% If a copy of the MIT was not distributed with this file, You can obtain one at https://opensource.org/licenses/mit
+%%
+%% Last update: 2021/07/11
+%% 
+%% author: Dorian Gouzou <jackred@tuta.io>
+%% repository hosted on github at https://github.com/jackred/Heriot_Watt_Thesis_Template
+%%%%
 \documentclass[12pt,a4paper]{report}
 
 \include{I-packages}
