UPDATE remove glossary number, also add word in readme
I can't read yes

--- a/I-packages.tex
+++ b/I-packages.tex
@@ -10,7 +10,7 @@
 \usepackage{mfirstuc} 
 \usepackage{calc}% http://ctan.org/pkg/calc
 \usepackage{setspace}
-\usepackage[acronym]{glossaries} % https://www.overleaf.com/learn/latex/Glossaries
+\usepackage[acronym, nonumberlist]{glossaries} % https://www.overleaf.com/learn/latex/Glossaries
 \usepackage[defernumbers=true]{biblatex}
 \usepackage{hyperref} % https://ctan.org/pkg/hyperref
 \usepackage{pdfpages}
