ADD 1.5 spacing, I forgot

--- a/I-config.tex
+++ b/I-config.tex
@@ -119,3 +119,6 @@
 \newcommand\eref[1]{equation~(\ref{#1})}
 \newcommand\tref[1]{table~\ref{#1}}
 \newcommand\fref[1]{figure~\ref{#1}}
+
+%% 1.5 line spacing
+\setstretch{1.5}
