UPDATE apparently all heading should be bold

--- a/I-config.tex
+++ b/I-config.tex
@@ -73,13 +73,13 @@
 
 %% Section, capitalised initial letter, 12-point
 \titleformat{\section}[hang]
-    {\normalfont\fontsize{\sectionFontSize}{\sectionBaseline}\selectfont}{\thesection}{5pt}{\capitalisewords}
+    {\normalfont\bfseries\fontsize{\sectionFontSize}{\sectionBaseline}\selectfont}{\thesection}{5pt}{\capitalisewords}
 %% left|above|below
 \titlespacing{\section}{0pt}{25pt}{15pt}
 
 %% Subsection, 12-point, italic
 \titleformat{\subsection}[hang]
-    {\normalfont\itshape\fontsize{\subsectionFontSize}{\subsectionBaseline}\selectfont\MakeLowercase}{\thesubsection}{5pt}{\makefirstuc}
+    {\normalfont\bfseries\itshape\fontsize{\subsectionFontSize}{\subsectionBaseline}\selectfont\MakeLowercase}{\thesubsection}{5pt}{\makefirstuc}
 %% left|above|below
 \titlespacing{\subsection}{0pt}{20pt}{10pt}
   
