FIX ironic, I can swear it was correctly sorted
until it wasn't

--- a/I-packages.tex
+++ b/I-packages.tex
@@ -11,7 +11,7 @@
 \usepackage{calc}% http://ctan.org/pkg/calc
 \usepackage{setspace}
 \usepackage[acronym, nonumberlist]{glossaries} % https://www.overleaf.com/learn/latex/Glossaries
-\usepackage[defernumbers=true]{biblatex}
+\usepackage[defernumbers=true, sorting=none]{biblatex}
 \usepackage{hyperref} % https://ctan.org/pkg/hyperref
 \usepackage{pdfpages}
 \usepackage{float}
