FIX bibliography was not sorting by citation
my example was misleading

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -2,7 +2,7 @@
 %% This Source Code Form is subject to the terms of the MIT License. 
 %% If a copy of the MIT was not distributed with this file, You can obtain one at https://opensource.org/licenses/mit
 %%
-%% Last update: 2021/07/11
+%% Last update: 2021/07/12
 %% 
 %% author: Dorian Gouzou <jackred@tuta.io>
 %% repository hosted on github at https://github.com/jackred/Heriot_Watt_Thesis_Template
@@ -104,7 +104,7 @@
 %% Log and output files > trash icons in Overleaf
 %% sorted by citation
 \label{Bibliography}
-\printbibliography[category=cited, title={References}, resetnumbers=true, heading=bibintoc]
+\printbibliography[title={References}, heading=bibintoc, resetnumbers=true]
 %% sorted by alphabetical order, using author name
 \begin{refsection}
 \DeclareFieldFormat{labelnumberwidth}{#1}
