--- a/I-config.tex
+++ b/I-config.tex
@@ -97,6 +97,9 @@
 \makenoidxglossaries
 
 %% bibliography config
+%% https://tex.stackexchange.com/a/6977
+\DeclareBibliographyCategory{cited}
+\AtEveryCitekey{\addtocategory{cited}{\thefield{entrykey}}}
 \addbibresource{Bibliography.bib}
 \addbibresource{BibMine.bib}
 
